Metrics sync to database
